Fix windows and make them translucent
This injects WebKit-specific gradients if on New 3DS (9f78680) on the kinlist page and makes windows translucent with a stronger blur than vanilla 7.css (10px instead of 1.5px). This partially breaks on old browsers but I think this is worth it for now.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.window.glass {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px)}
+
 .window.is-bright {
     max-width: 350px}
 
